# calendar_app

./: .gitignore
backend/: pyproject.toml
backend/core/: settings.py  urls.py
backend/simple_calendar/: apps.py  models.py  urls.py  views.py
