[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Aleksey <ranangariel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1"
psycopg2 = "^2.9.9"
djangorestframework = "^3.15.2"
drf-yasg = "^1.21.7"


[tool.poetry.group.dev.dependencies]
coverage = "^7.6.1"
pylint = "^3.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
